fixed the wrap for mobile again

--- a/style.css
+++ b/style.css
@@ -326,8 +326,8 @@ h5 {
 
 .used-code-other-projects {
   display: flex;
-  margin-top: 14px;
   margin-bottom: 40px;
+  flex-wrap: wrap;
 }
 
 .used-code-other-projects p, .used-code p {
@@ -340,6 +340,7 @@ h5 {
   height: auto;
   padding: 4px;
   margin-right: 8px;
+  margin-top: 14px;
 }
 
 .my-thoughts {
